Update service tests only (excluding config changes)